--- a/index.html
+++ b/index.html
@@ -41,12 +41,17 @@
         <h2>How can I create a checkbox in HTML?</h2>
 
         <form>
-          <button>input type =</button>
-          <button>&#039;Do-while&#039; loops</button>
-          <button>&#039;While&#039; loops</button>
-          <button>&#039;For&#039; loops</button>
-          <p>QUESTION 1 <span>/ 10</span></p>
-          <button></button>
+          <div class="container-buttons">
+            <button>input type =</button>
+            <button>&#039;Do-while&#039; loops</button>
+            <button>&#039;While&#039; loops</button>
+            <button>&#039;For&#039; loops</button>
+          </div>
+
+          <div class="form-footer">
+            <p>QUESTION 1 <span>/ 10</span></p>
+            <button id="avanti">AVATI</button>
+          </div>
         </form>
       </div>
     </main>
