--- a/index.html
+++ b/index.html
@@ -1,59 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/reset.css" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <header>
-      <img src="./assets/img/epicode_logo.png" alt="Logo-EPICODE" />
-      <div id="countdown">
-        <p>SECONDS</p>
-        <p>16</p>
-        <p>REMAINING</p>
-      </div>
-    </header>
-    <main>
-      <div id="welcome">
-        <h1>Welcome to <strong>your exam</strong></h1>
-        <div>
-          <h3>Instruction</h3>
-          <p>
-            We don't expect most engineers to know the answer to all of these questions, so don't worry if you are
-            unsure of a few of them.
-          </p>
-          <ul>
-            <li>Each question is <strong>timed</strong> and can only be <strong>answered once</strong>.</li>
-            <li>Changing browser tab or opening other windows will <strong>invalidate the question</strong>.</li>
-            <li>This exam will take approx. <strong>0-5 minutes</strong>.</li>
-          </ul>
-          <form>
-            <input type="checkbox" required />
-            <p><strong>I promise to answer myself without help from anyone</strong></p>
-            <button id="proceed">PROCEED</button>
-          </form>
-        </div>
-      </div>
-      <div id="exam">
-        <h2>How can I create a checkbox in HTML?</h2>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./assets/css/reset.css" />
+		<link rel="stylesheet" href="./assets/css/style.css" />
+		<title>Document</title>
+	</head>
+	<body>
+		<header>
+			<img src="./assets/img/epicode_logo.png" alt="Logo-EPICODE" />
+			<div id="countdown">
+				<p>SECONDS</p>
+				<p>16</p>
+				<p>REMAINING</p>
+			</div>
+		</header>
+		<main>
+			<div id="welcome">
+				<h1>Welcome to <strong>your exam</strong></h1>
+				<div>
+					<h3>Instruction</h3>
+					<p>
+						We don't expect most engineers to know the answer to all of these questions, so don't worry if you are
+						unsure of a few of them.
+					</p>
+					<ul>
+						<li>Each question is <strong>timed</strong> and can only be <strong>answered once</strong>.</li>
+						<li>Changing browser tab or opening other windows will <strong>invalidate the question</strong>.</li>
+						<li>This exam will take approx. <strong>0-5 minutes</strong>.</li>
+					</ul>
+					<form>
+						<input type="checkbox" required />
+						<p><strong>I promise to answer myself without help from anyone</strong></p>
+						<button id="proceed">PROCEED</button>
+					</form>
+				</div>
+			</div>
+			<div id="exam">
+				<h2>How can I create a checkbox in HTML?</h2>
 
-        <form>
-          <div class="container-buttons">
-            <button>input type =</button>
-            <button>&#039;Do-while&#039; loops</button>
-            <button>&#039;While&#039; loops</button>
-            <button>&#039;For&#039; loops</button>
-          </div>
+				<form>
+					<div class="container-buttons">
+						<button>input type =</button>
+						<button>&#039;Do-while&#039; loops</button>
+						<button>&#039;While&#039; loops</button>
+						<button>&#039;For&#039; loops</button>
+					</div>
 
-          <div class="form-footer">
-            <p>QUESTION 1 <span>/ 10</span></p>
-            <button id="avanti">AVATI</button>
-          </div>
-        </form>
-      </div>
-    </main>
-  </body>
+					<div class="form-footer">
+						<p>QUESTION 1 <span>/ 10</span></p>
+						<button id="avanti">AVATI</button>
+					</div>
+				</form>
+			</div>
+			<div id="results">
+				<h2>Results</h2>
+				<h3>The summary of your answer</h3>
+				<div class="cont-results">
+					<div class="answer-result inline-block">
+						<h2>Correct 66.7%</h2>
+						<h4>4/6 questions</h4>
+					</div>
+
+					<div class="result-grafic inline-block">
+						<p>
+							<strong>
+								Congratulations! <br />
+								You passed the exam.
+							</strong>
+						</p>
+						<p>We'll send you the certificate in few moments. Check your email(including promotion / spam folder)</p>
+					</div>
+
+					<div class="answer-result inline-block">
+						<h2>Wrong 33.3%</h2>
+						<h4>2/6 questions</h4>
+					</div>
+				</div>
+				<button type="button" id="rate-us">RATE US</button>
+			</div>
+		</main>
+	</body>
 </html>
