feedback page done

--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
 					<form>
 						<input type="checkbox" required />
 						<p><strong>I promise to answer myself without help from anyone</strong></p>
-						<button id="proceed">PROCEED</button>
+						<button class="proceed">PROCEED</button>
 					</form>
 				</div>
 			</div>
+
 			<div id="exam">
 				<h2>How can I create a checkbox in HTML?</h2>
 
@@ -80,6 +81,28 @@
 				</div>
 				<button type="button" id="rate-us">RATE US</button>
 			</div>
+
+      <div id="feedback">
+        <h2>Tell us how it's going</h2>
+        <p>From 0 to 10, how likely are you to recommend EPICODE to a friend or a colleague?</p>
+        <div id="img-stelle">
+          <img src="./assets/img/star.svg" alt="stella1">
+          <img src="./assets/img/star.svg" alt="stella2">
+          <img src="./assets/img/star.svg" alt="stella3">
+          <img src="./assets/img/star.svg" alt="stella4">
+          <img src="./assets/img/star.svg" alt="stella5">
+          <img src="./assets/img/star.svg" alt="stella6">
+          <img src="./assets/img/star.svg" alt="stella7">
+          <img src="./assets/img/star.svg" alt="stella8">
+          <img src="./assets/img/star.svg" alt="stella9">
+          <img src="./assets/img/star.svg" alt="stella10">
+        </div>
+        <p>Leave us an open feedback about your experience so far</p>
+        <form>
+          <input type="text" placeholder="Write your comment here">
+          <button class="proceed">MORE INFO</button>
+        </form>
+      </div>
 		</main>
 	</body>
 </html>
