fixed button id welcome page

--- a/feedback.html
+++ b/feedback.html
@@ -30,7 +30,7 @@
         <p>Leave us an open feedback about your experience so far</p>
         <form>
           <input type="text" placeholder="Write your comment here" />
-          <button class="proceed">MORE INFO</button>
+          <button id="proceed">MORE INFO</button>
         </form>
       </div>
     </main>
