added script tag

--- a/exam.html
+++ b/exam.html
@@ -61,5 +61,6 @@
         <button type="button" id="rate-us">RATE US</button>
       </div>
     </main>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
