funzionamento dei pulsanti

--- a/exam.html
+++ b/exam.html
@@ -22,10 +22,10 @@
 
         <form>
           <div class="container-buttons">
-            <button>input type =</button>
-            <button>&#039;Do-while&#039; loops</button>
-            <button>&#039;While&#039; loops</button>
-            <button>&#039;For&#039; loops</button>
+            <button type="button">input type =</button>
+            <button type="button">&#039;Do-while&#039; loops</button>
+            <button type="button">&#039;While&#039; loops</button>
+            <button type="button">&#039;For&#039; loops</button>
           </div>
 
           <div class="form-footer">
