--- a/exam.html
+++ b/exam.html
@@ -30,7 +30,7 @@
 
           <div class="form-footer">
             <p>QUESTION 1 <span>/ 10</span></p>
-            <button id="avanti">AVATI</button>
+            <button id="avanti">AVANTI</button>
           </div>
         </form>
       </div>
