fix welcome page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <img src="./assets/img/epicode_logo.png" alt="Logo-EPICODE" />
     </header>
-    <main>
+    <main id="welcome-main">
       <div id="welcome">
         <h1>Welcome to <strong>your exam</strong></h1>
         <div>
@@ -26,8 +26,8 @@
             <li>This exam will take approx. <strong>0-5 minutes</strong>.</li>
           </ul>
           <form action="exam.html">
-            <input type="checkbox" required />
-            <p><strong>I promise to answer myself without help from anyone</strong></p>
+            <input type="checkbox" required id="checkbox1"/>
+            <label for="checkbox1"><strong>I promise to answer myself without help from anyone</strong></label>
             <button id="proceed">PROCEED</button>
           </form>
         </div>
