--- a/exam.html
+++ b/exam.html
@@ -17,8 +17,7 @@
 			</div>
 		</header>
 		<main>
-			<!-- style="display: none" -->
-			<div id="exam">
+			<div id="exam" style="display: none">
 				<h2>How can I create a checkbox in HTML?</h2>
 
 				<form>
@@ -39,8 +38,7 @@
       
       
       --------------------------------------------------------------------------------------------------------------------------------------->
-			<div id="results">
-				<!-- style="display: block" -->
+			<div id="results" style="display: block">
 				<h2>Results</h2>
 				<h3>The summary of your answer</h3>
 
