commit before css edit

--- a/feedback.html
+++ b/feedback.html
@@ -29,7 +29,7 @@
         </div>
         <p>Leave us an open feedback about your experience so far</p>
         <form>
-          <input type="text" placeholder="Write your comment here" />
+          <input type="text" placeholder="Write your comment here" required />
           <button id="proceed">MORE INFO</button>
         </form>
       </div>
