--- a/test pi/pie.html
+++ b/test pi/pie.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="../assets/css/reset.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
     <link rel="stylesheet" href="pie.css" />
   </head>
   <body>
+    <div id="results">
+      <h2>Results</h2>
+      <h3>The summary of your answer</h3>
+      <div class="cont-results">
+        <div class="answer-result inline-block corrects-result">
+          <h2>Correct 66.7%</h2>
+          <h4>4/6 questions</h4>
+        </div>
+
+        <div class="result-grafic inline-block">
+          <p>
+            <strong>
+              Congratulations! <br />
+              You passed the exam.
+            </strong>
+          </p>
+          <p>We'll send you the certificate in few moments. Check your email(including promotion / spam folder)</p>
+        </div>
+
+        <div class="answer-result inline-block wrongs-result">
+          <h2>Wrong 33.3%</h2>
+          <h4>2/6 questions</h4>
+        </div>
+      </div>
+      <button type="button" id="rate-us">RATE US</button>
+    </div>
+
     <div id="container"></div>
     <svg width="100" height="100">
       <circle r="30" cx="50" cy="50" />
