corrected css exam page

--- a/exam.html
+++ b/exam.html
@@ -16,7 +16,7 @@
 				<p>REMAINING</p>
 			</div>
 		</header>
-		<main>
+		<main class="main-exam">
 			<div id="exam">
 				<h2>How can I create a checkbox in HTML?</h2>
 
