--- a/exam.html
+++ b/exam.html
@@ -22,7 +22,7 @@
         </svg>
       </div>
     </header>
-    <main>
+    <main class="main-exam">
       <div id="exam">
         <h2>How can I create a checkbox in HTML?</h2>
 
