Revert "major updates css"
This reverts commit c8f5e2aee28b90afafc8683749e0215335582585.

--- a/exam.html
+++ b/exam.html
@@ -36,11 +36,11 @@
 			</div>
 			<div id="results">
 				<h2>Results</h2>
-				<h3>The summary of your answer:</h3>
+				<h3>The summary of your answer</h3>
 				<div class="cont-results">
-					<div class="answer-result inline-block wrongs-result">
-						<h2>Wrong 33.3%</h2>
-						<h4>2/6 questions</h4>
+					<div class="answer-result inline-block corrects-result">
+						<h2>Correct 66.7%</h2>
+						<h4>4/6 questions</h4>
 					</div>
 
 					<div class="result-grafic inline-block">
@@ -52,11 +52,11 @@
 						</p>
 						<p>We'll send you the certificate in few moments. Check your email(including promotion / spam folder)</p>
 					</div>
-					<div class="answer-result inline-block corrects-result">
-						<h2>Correct 66.7%</h2>
-						<h4>4/6 questions</h4>
+
+					<div class="answer-result inline-block wrongs-result">
+						<h2>Wrong 33.3%</h2>
+						<h4>2/6 questions</h4>
 					</div>
-					
 				</div>
 				<button type="button" id="rate-us">RATE US</button>
 			</div>
