--- a/exam.html
+++ b/exam.html
@@ -10,6 +10,7 @@
 	<body>
 		<header>
 			<img src="./assets/img/epicode_logo.png" alt="Logo-EPICODE" />
+
 			<div id="countdown">
 				<div id="countdown-text">
 					<p>SECONDS</p>
@@ -23,7 +24,8 @@
 			</div>
 		</header>
 		<main class="main-exam">
-			<div id="exam">
+			<!--  -->
+			<div id="exam" style="display: none">
 				<h2>How can I create a checkbox in HTML?</h2>
 
 				<form>
@@ -40,7 +42,8 @@
 					</div>
 				</form>
 			</div>
-			<div id="results">
+			<!--  -->
+			<div id="results" style="display: block">
 				<h2>Results</h2>
 				<h3>The summary of your answer</h3>
 				<div class="cont-results">
@@ -50,13 +53,17 @@
 					</div>
 
 					<div class="result-grafic inline-block">
-						<p>
-							<strong>
-								Congratulations! <br />
-								You passed the exam.
-							</strong>
-						</p>
-						<p>We'll send you the certificate in few moments. Check your email(including promotion / spam folder)</p>
+						<div class="resutGrafic-text">
+							<p>
+								<strong> Congratulations! You passed the exam. </strong>
+							</p>
+
+							<p>We'll send you the certificate in few moments. Check your email(including promotion / spam folder)</p>
+						</div>
+						<svg>
+							<circle r="160" cx="50%" cy="50%" />
+							<circle r="160" cx="50%" cy="50%" />
+						</svg>
 					</div>
 
 					<div class="answer-result inline-block wrongs-result">
