cancel commit display none

--- a/exam.html
+++ b/exam.html
@@ -24,8 +24,7 @@
 			</div>
 		</header>
 		<main class="main-exam">
-			<!--  -->
-			<div id="exam" style="display: none">
+			<div id="exam">
 				<h2>How can I create a checkbox in HTML?</h2>
 
 				<form>
@@ -42,8 +41,7 @@
 					</div>
 				</form>
 			</div>
-			<!--  -->
-			<div id="results" style="display: block">
+			<div id="results">
 				<h2>Results</h2>
 				<h3>The summary of your answer</h3>
 				<div class="cont-results">
