minor fix result page (css)

--- a/exam.html
+++ b/exam.html
@@ -42,30 +42,24 @@
 				</form>
 			</div>
 			<div id="results">
-				<h2>Results</h2>
+				<h2><strong>Results</strong></h2>
 				<h3>The summary of your answer</h3>
 				<div class="cont-results">
-					<div class="answer-result inline-block wrongs-result">
-						<h2>Wrong 33.3%</h2>
-						<h4>2/6 questions</h4>
+					<div class="answer-result inline-block corrects-result">
 					</div>
 					<div class="result-grafic inline-block">
 						<div class="resutGrafic-text">
 							<p>
-								<strong> Congratulations! You passed the exam. </strong>
 							</p>
-
-							<p>We'll send you the certificate in few moments. Check your email(including promotion / spam folder)</p>
 						</div>
 						<svg>
 							<circle r="160" cx="50%" cy="50%" />
 							<circle r="160" cx="50%" cy="50%" />
 						</svg>
 					</div>
-					<div class="answer-result inline-block corrects-result">
-						<h2>Correct 66.7%</h2>
-						<h4>4/6 questions</h4>
+					<div class="answer-result inline-block wrongs-result">
 					</div>
+					
 				</div>
 				<button type="button" id="rate-us">RATE US</button>
 			</div>
