corretto domanda e bottoni

--- a/exam.html
+++ b/exam.html
@@ -25,8 +25,9 @@
 		</header>
 		<main class="main-exam">
 			<div id="exam">
-				<h2>How can I create a checkbox in HTML?</h2>
-
+				<div id="domanda">
+					<h2>How can I create a checkbox in HTML?</h2>
+				</div>
 				<form>
 					<div class="container-buttons">
 						<button type="button">input type =</button>
