minor fix exam buttons

--- a/exam.html
+++ b/exam.html
@@ -38,7 +38,7 @@
 
 					<div class="form-footer">
 						<p>QUESTION 1 <span>/ 10</span></p>
-						<button id="avanti">AVANTI</button>
+						<button id="avanti">NEXT</button>
 					</div>
 				</form>
 			</div>
