--- a/exam.html
+++ b/exam.html
@@ -23,7 +23,7 @@
 				</svg>
 			</div>
 		</header>
-		<main class="main-exam">
+		<main>
 			<div id="exam">
 				<h2>How can I create a checkbox in HTML?</h2>
 
@@ -41,25 +41,26 @@
 					</div>
 				</form>
 			</div>
+
 			<div id="results">
 				<h2><strong>Results</strong></h2>
 				<h3>The summary of your answer</h3>
+
 				<div class="cont-results">
-					<div class="answer-result inline-block corrects-result">
-					</div>
-					<div class="result-grafic inline-block">
+					<div class="answer-result corrects-result"></div>
+
+					<div class="result-grafic">
 						<div class="resutGrafic-text">
-							<p>
-							</p>
+							<p></p>
 						</div>
+
 						<svg>
 							<circle r="160" cx="50%" cy="50%" />
 							<circle r="160" cx="50%" cy="50%" />
 						</svg>
 					</div>
-					<div class="answer-result inline-block wrongs-result">
-					</div>
-					
+
+					<div class="answer-result wrongs-result"></div>
 				</div>
 				<button type="button" id="rate-us">RATE US</button>
 			</div>
