--- a/exam.html
+++ b/exam.html
@@ -11,7 +11,7 @@
 		<header>
 			<img src="./assets/img/epicode_logo.png" alt="Logo-EPICODE" />
 
-			<div id="countdown">
+			<div id="countdown" style="display: none">
 				<div id="countdown-text">
 					<p>SECONDS</p>
 					<p>16</p>
@@ -24,6 +24,38 @@
 			</div>
 		</header>
 		<main>
+			<div id="welcome">
+				<h1>Welcome to <strong>your exam</strong></h1>
+				<div>
+					<h3>Instruction</h3>
+					<p>
+						We don't expect most engineers to know the answer to all of these questions, so don't worry if you are
+						unsure of a few of them.
+					</p>
+					<ul class="instrucrion-list">
+						<li>Each question is <strong>timed</strong> and can only be <strong>answered once</strong>.</li>
+						<li>Changing browser tab or opening other windows will <strong>invalidate the question</strong>.</li>
+						<li>This exam will take approx. <strong>0-5 minutes</strong>.</li>
+					</ul>
+
+					<form>
+						<div class="cont-range">
+							<ul>
+								<li>Easy</li>
+								<li>Medium</li>
+								<li>Hard</li>
+							</ul>
+
+							<input id="rangeValue" type="range" min="1" max="3" step="1" value="1" />
+						</div>
+
+						<input type="checkbox" required id="checkbox1" />
+						<label for="checkbox1"><strong>I promise to answer myself without help from anyone</strong></label>
+						<button id="proceed">PROCEED</button>
+					</form>
+				</div>
+			</div>
+
 			<div id="exam">
 				<div id="domanda">
 					<h2>How can I create a checkbox in HTML?</h2>
