--- a/index.html
+++ b/index.html
@@ -1,37 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/reset.css" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <header>
-      <img src="./assets/img/epicode_logo.png" alt="Logo-EPICODE" />
-    </header>
-    <main id="welcome-main">
-      <div id="welcome">
-        <h1>Welcome to <strong>your exam</strong></h1>
-        <div>
-          <h3>Instruction</h3>
-          <p>
-            We don't expect most engineers to know the answer to all of these questions, so don't worry if you are
-            unsure of a few of them.
-          </p>
-          <ul>
-            <li>Each question is <strong>timed</strong> and can only be <strong>answered once</strong>.</li>
-            <li>Changing browser tab or opening other windows will <strong>invalidate the question</strong>.</li>
-            <li>This exam will take approx. <strong>0-5 minutes</strong>.</li>
-          </ul>
-          <form action="exam.html">
-            <input type="checkbox" required id="checkbox1"/>
-            <label for="checkbox1"><strong>I promise to answer myself without help from anyone</strong></label>
-            <button id="proceed">PROCEED</button>
-          </form>
-        </div>
-      </div>
-    </main>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./assets/css/reset.css" />
+		<link rel="stylesheet" href="./assets/css/style.css" />
+		<title>Document</title>
+	</head>
+	<body>
+		<header>
+			<img src="./assets/img/epicode_logo.png" alt="Logo-EPICODE" />
+		</header>
+		<main id="welcome-main"></main>
+	</body>
 </html>
