--- a/exam.html
+++ b/exam.html
@@ -11,7 +11,7 @@
 		<header>
 			<img src="./assets/img/epicode_logo.png" alt="Logo-EPICODE" />
 
-			<div id="countdown" style="display: none">
+			<div id="countdown">
 				<div id="countdown-text">
 					<p>SECONDS</p>
 					<p>16</p>
