add class universal-style-btn-slc

--- a/exam.html
+++ b/exam.html
@@ -51,7 +51,7 @@
 
 						<input type="checkbox" required id="checkbox1" />
 						<label for="checkbox1"><strong>I promise to answer myself without help from anyone</strong></label>
-						<button id="proceed" class="universal-style-btn">PROCEED</button>
+						<button id="proceed" class="universal-style-btn-ns universal-style-btn-slc">PROCEED</button>
 					</form>
 				</div>
 			</div>
@@ -70,7 +70,7 @@
 
 					<div class="form-footer">
 						<p>QUESTION 1 <span>/ 10</span></p>
-						<button id="avanti" class="universal-style-btn">NEXT</button>
+						<button id="avanti" class="universal-style-btn-ns universal-style-btn-slc">NEXT</button>
 					</div>
 				</form>
 			</div>
@@ -95,7 +95,7 @@
 
 					<div class="answer-result wrongs-result"></div>
 				</div>
-				<button type="button" id="rate-us" class="universal-style-btn">RATE US</button>
+				<button type="button" id="rate-us" class="universal-style-btn-ns universal-style-btn-slc">RATE US</button>
 			</div>
 		</main>
 		<script src="assets/js/script.js"></script>
