all btn "avanti" have the same style

--- a/feedback.html
+++ b/feedback.html
@@ -30,7 +30,7 @@
         <p>Leave us an open feedback about your experience so far</p>
         <form>
           <input type="text" placeholder="Write your comment here" required />
-          <button id="proceed">MORE INFO</button>
+          <button id="proceed" class="universal-style-btn-slc">MORE INFO</button>
         </form>
       </div>
     </main>
