review first version

--- a/exam.html
+++ b/exam.html
@@ -1,103 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./assets/css/reset.css" />
-		<link rel="stylesheet" href="./assets/css/style.css" />
-		<title>Document</title>
-	</head>
-	<body>
-		<header>
-			<img src="./assets/img/epicode_logo.png" alt="Logo-EPICODE" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <header>
+      <img src="./assets/img/epicode_logo.png" alt="Logo-EPICODE" />
 
-			<div id="countdown">
-				<div id="countdown-text">
-					<p>SECONDS</p>
-					<p>16</p>
-					<p>REMAINING</p>
-				</div>
-				<svg>
-					<circle r="52" cx="50%" cy="50%" />
-					<circle r="52" cx="50%" cy="50%" />
-				</svg>
-			</div>
-		</header>
-		<main>
-			<div id="welcome">
-				<h1>Welcome to <strong>your exam</strong></h1>
-				<div>
-					<h3>Instruction</h3>
-					<p>
-						We don't expect most engineers to know the answer to all of these questions, so don't worry if you are
-						unsure of a few of them.
-					</p>
-					<ul class="instrucrion-list">
-						<li>Each question is <strong>timed</strong> and can only be <strong>answered once</strong>.</li>
-						<li>Changing browser tab or opening other windows will <strong>invalidate the question</strong>.</li>
-						<li>This exam will take approx. <strong>0-5 minutes</strong>.</li>
-					</ul>
+      <div id="countdown">
+        <div id="countdown-text">
+          <p>SECONDS</p>
+          <p>16</p>
+          <p>REMAINING</p>
+        </div>
+        <svg>
+          <circle r="52" cx="50%" cy="50%" />
+          <circle r="52" cx="50%" cy="50%" />
+        </svg>
+      </div>
+    </header>
+    <main>
+      <div id="welcome">
+        <h1>Welcome to <strong>your exam</strong></h1>
+        <div>
+          <h3>Instruction</h3>
+          <p>
+            We don't expect most engineers to know the answer to all of these questions, so don't worry if you are
+            unsure of a few of them.
+          </p>
+          <ul class="instrucrion-list">
+            <li>Each question is <strong>timed</strong> and can only be <strong>answered once</strong>.</li>
+            <li>Changing browser tab or opening other windows will <strong>invalidate the question</strong>.</li>
+            <li>This exam will take approx. <strong>0-5 minutes</strong>.</li>
+          </ul>
 
-					<form>
-						<div class="cont-range">
-							<ul>
-								<li>Easy</li>
-								<li>Medium</li>
-								<li>Hard</li>
-							</ul>
+          <form>
+            <div class="cont-range">
+              <ul>
+                <li>Easy</li>
+                <li>Medium</li>
+                <li>Hard</li>
+              </ul>
 
-							<input id="rangeValue" type="range" min="1" max="3" step="1" value="1" />
-						</div>
+              <input id="rangeValue" type="range" min="1" max="3" step="1" value="1" />
+            </div>
 
-						<input type="checkbox" required id="checkbox1" />
-						<label for="checkbox1"><strong>I promise to answer myself without help from anyone</strong></label>
-						<button id="proceed">PROCEED</button>
-					</form>
-				</div>
-			</div>
+            <input type="checkbox" required id="checkbox1" />
+            <label for="checkbox1"><strong>I promise to answer myself without help from anyone</strong></label>
+            <button id="proceed">PROCEED</button>
+          </form>
+        </div>
+      </div>
 
-			<div id="exam">
-				<div id="domanda">
-					<h2>How can I create a checkbox in HTML?</h2>
-				</div>
-				<form>
-					<div class="container-buttons">
-						<button type="button">input type =</button>
-						<button type="button">&#039;Do-while&#039; loops</button>
-						<button type="button">&#039;While&#039; loops</button>
-						<button type="button">&#039;For&#039; loops</button>
-					</div>
+      <div id="exam">
+        <div id="domanda">
+          <h2>How can I create a checkbox in HTML?</h2>
+        </div>
+        <form>
+          <div class="container-buttons">
+            <button type="button">input type =</button>
+            <button type="button">&#039;Do-while&#039; loops</button>
+            <button type="button">&#039;While&#039; loops</button>
+            <button type="button">&#039;For&#039; loops</button>
+          </div>
 
-					<div class="form-footer">
-						<p>QUESTION 1 <span>/ 10</span></p>
-						<button id="avanti">NEXT</button>
-					</div>
-				</form>
-			</div>
+          <div class="form-footer">
+            <p>QUESTION 1 <span>/ 10</span></p>
+            <button id="avanti">NEXT</button>
+          </div>
+        </form>
+      </div>
 
-			<div id="results">
-				<h2><strong>Results</strong></h2>
-				<h3>The summary of your answer</h3>
+      <div id="results">
+        <h2><strong>Results</strong></h2>
+        <h3>The summary of your answer</h3>
 
-				<div class="cont-results">
-					<div class="answer-result corrects-result"></div>
+        <div class="cont-results">
+          <div class="answer-result corrects-result"></div>
 
-					<div class="result-grafic">
-						<div class="resutGrafic-text">
-							<p></p>
-						</div>
+          <div class="result-grafic">
+            <div class="resutGrafic-text">
+              <p></p>
+            </div>
 
-						<svg>
-							<circle r="160" cx="50%" cy="50%" />
-							<circle r="160" cx="50%" cy="50%" />
-						</svg>
-					</div>
+            <svg>
+              <circle r="160" cx="50%" cy="50%" />
+              <circle r="160" cx="50%" cy="50%" />
+            </svg>
+          </div>
 
-					<div class="answer-result wrongs-result"></div>
-				</div>
-				<button type="button" id="rate-us">RATE US</button>
-			</div>
-		</main>
-		<script src="assets/js/script.js"></script>
-	</body>
+          <div class="answer-result wrongs-result"></div>
+        </div>
+        <button type="button" id="rate-us">RATE US</button>
+      </div>
+      <div id="review"></div>
+    </main>
+    <script src="assets/js/script.js"></script>
+  </body>
 </html>
