--- a/exam.html
+++ b/exam.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/426cbf9d74.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
