--- a/exam.html
+++ b/exam.html
@@ -95,7 +95,7 @@
 
 					<div class="answer-result wrongs-result"></div>
 				</div>
-				<button type="button" id="rate-us" class="universal-style-btn-ns universal-style-btn-slc">RATE US</button>
+				<button type="button" id="rate-us" class="universal-style-btn-ns">RATE US</button>
 			</div>
 		</main>
 		<script src="./assets/js/index.js"></script>
