div delle risposte giuste e sbagliate

--- a/exam.html
+++ b/exam.html
@@ -98,6 +98,7 @@
 				</div>
 				<button type="button" id="rate-us" class="universal-style-btn-ns">RATE US</button>
 			</div>
+			<div id="review"></div>
 		</main>
 		<script src="./assets/js/index.js"></script>
 		<script src="./assets/js/script.js"></script>
