--- a/exam.html
+++ b/exam.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Document</title>
-    <script src="https://kit.fontawesome.com/426cbf9d74.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/426cbf9d74.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -30,15 +33,20 @@
         <div>
           <h3>Instruction</h3>
           <p>
-            We don't expect most engineers to know the answer to all of these questions, so don't worry if you are
-            unsure of a few of them.
+            We don't expect most engineers to know the answer to all of these
+            questions, so don't worry if you are unsure of a few of them.
           </p>
           <ul class="instrucrion-list">
-            <li>Each question is <strong>timed</strong> and can only be <strong>answered once</strong>.</li>
-            <li>Changing browser tab or opening other windows will <strong>invalidate the question</strong>.</li>
+            <li>
+              Each question is <strong>timed</strong> and can only be
+              <strong>answered once</strong>.
+            </li>
+            <li>
+              Changing browser tab or opening other windows will
+              <strong>invalidate the question</strong>.
+            </li>
             <li>This exam will take approx. <strong>0-5 minutes</strong>.</li>
           </ul>
-
           <form>
             <div class="cont-range">
               <ul>
@@ -46,16 +54,26 @@
                 <li>Medium</li>
                 <li>Hard</li>
               </ul>
-
-              <input id="rangeValue" type="range" min="1" max="3" step="1" value="1" />
+              <input
+                id="rangeValue"
+                type="range"
+                min="1"
+                max="3"
+                step="1"
+                value="1"
+              />
             </div>
 
-						<input type="checkbox" required id="checkbox1" />
-						<label for="checkbox1"><strong>I promise to answer myself without help from anyone</strong></label>
-						<button id="proceed" class="universal-style-btn-ns">PROCEED</button>
-					</form>
-				</div>
-			</div>
+            <input type="checkbox" required id="checkbox1" />
+            <label for="checkbox1">
+              <strong
+                >I promise to answer myself without help from anyone</strong
+              >
+            </label>
+            <button id="proceed" class="universal-style-btn-ns">PROCEED</button>
+          </form>
+        </div>
+      </div>
 
       <div id="exam">
         <div id="domanda">
@@ -68,18 +86,16 @@
             <button type="button">&#039;While&#039; loops</button>
             <button type="button">&#039;For&#039; loops</button>
           </div>
-
-					<div class="form-footer">
-						<p>QUESTION 1 <span>/ 10</span></p>
-						<button id="avanti" class="universal-style-btn-ns">NEXT</button>
-					</div>
-				</form>
-			</div>
+          <div class="form-footer">
+            <p>QUESTION 1 <span>/ 10</span></p>
+            <button id="avanti" class="universal-style-btn-ns">NEXT</button>
+          </div>
+        </form>
+      </div>
 
       <div id="results">
         <h2><strong>Results</strong></h2>
         <h3>The summary of your answer</h3>
-
         <div class="cont-results">
           <div class="answer-result corrects-result"></div>
 
@@ -87,20 +103,20 @@
             <div class="resutGrafic-text">
               <p></p>
             </div>
-
             <svg>
               <circle r="160" cx="50%" cy="50%" />
               <circle r="160" cx="50%" cy="50%" />
             </svg>
           </div>
-
-					<div class="answer-result wrongs-result"></div>
-				</div>
-				<button type="button" id="rate-us" class="universal-style-btn-ns">RATE US</button>
-			</div>
-			<div id="review"></div>
-		</main>
-		<script src="./assets/js/index.js"></script>
-		<script src="./assets/js/script.js"></script>
-	</body>
+          <div class="answer-result wrongs-result"></div>
+        </div>
+        <button type="button" id="rate-us" class="universal-style-btn-ns">
+          RATE US
+        </button>
+      </div>
+      <div id="review"></div>
+    </main>
+    <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/script.js"></script>
+  </body>
 </html>
