fix feedback page

--- a/feedback.html
+++ b/feedback.html
@@ -14,7 +14,10 @@
     <main id="feedback-main">
       <div id="feedback">
         <h2>Tell us how it's going</h2>
-        <p>From 0 to 10, how likely are you to recommend EPICODE to a friend or a colleague?</p>
+        <p>
+          From 0 to 10, how likely are you to recommend EPICODE to a friend or a
+          colleague?
+        </p>
         <div id="img-stelle">
           <img src="./assets/img/star.svg" alt="stella1" />
           <img src="./assets/img/star.svg" alt="stella2" />
@@ -30,7 +33,12 @@
         <p>Leave us an open feedback about your experience so far</p>
         <form>
           <input type="text" placeholder="Write your comment here" required />
-          <button id="proceed" class="universal-style-btn-slc">MORE INFO</button>
+          <button
+            id="more-info"
+            class="universal-style-btn-ns universal-style-btn-slc"
+          >
+            MORE INFO
+          </button>
         </form>
       </div>
     </main>
