add second button in rate-us and fix some properties (css)

--- a/exam.html
+++ b/exam.html
@@ -113,6 +113,13 @@
         <button type="button" id="rate-us" class="universal-style-btn-ns">
           RATE US
         </button>
+        <button
+          type="button"
+          id="your-questions"
+          class="universal-style-btn-ns"
+        >
+          YOUR QUESTION
+        </button>
       </div>
       <div id="review"></div>
     </main>
