--- a/feedback.html
+++ b/feedback.html
@@ -33,10 +33,7 @@
         <p>Leave us an open feedback about your experience so far</p>
         <form>
           <input type="text" placeholder="Write your comment here" required />
-          <button
-            id="more-info"
-            class="universal-style-btn-ns universal-style-btn-slc"
-          >
+          <button id="more-info" class="universal-style-btn-ns">
             MORE INFO
           </button>
         </form>
