--- a/exam.html
+++ b/exam.html
@@ -113,12 +113,8 @@
         <button type="button" id="rate-us" class="universal-style-btn-ns">
           RATE US
         </button>
-        <button
-          type="button"
-          id="your-questions"
-          class="universal-style-btn-ns"
-        >
-          YOUR QUESTION
+        <button type="button" id="your-answers" class="universal-style-btn-ns">
+          YOUR ANSWERS
         </button>
       </div>
       <div id="review"></div>
