--- a/exam.html
+++ b/exam.html
@@ -81,10 +81,10 @@
         </div>
         <form>
           <div class="container-buttons">
-            <button type="button">input type =</button>
-            <button type="button">&#039;Do-while&#039; loops</button>
-            <button type="button">&#039;While&#039; loops</button>
-            <button type="button">&#039;For&#039; loops</button>
+            <div class="butttons">input type =</button>
+            <div class="butttons">&#039;Do-while&#039; loops</button>
+            <div class="butttons">&#039;While&#039; loops</button>
+            <div class="butttons">&#039;For&#039; loops</button>
           </div>
           <div class="form-footer">
             <p>QUESTION 1 <span>/ 10</span></p>
