--- a/exam.html
+++ b/exam.html
@@ -13,7 +13,9 @@
   </head>
   <body>
     <header>
-      <img src="./assets/img/epicode_logo.png" alt="Logo-EPICODE" />
+      <a href="./exam.html"
+        ><img src="./assets/img/epicode_logo.png" alt="Logo-EPICODE"
+      /></a>
 
       <div id="countdown">
         <div id="countdown-text">
