--- a/feedback.html
+++ b/feedback.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <header>
-      <img src="./assets/img/epicode_logo.png" alt="Logo-EPICODE" />
+      <a href="./exam.html"
+        ><img src="./assets/img/epicode_logo.png" alt="Logo-EPICODE"
+      /></a>
     </header>
     <main id="feedback-main">
       <div id="feedback">
