add confirmation to return to welcome

--- a/exam.html
+++ b/exam.html
@@ -14,7 +14,10 @@
   <body>
     <header>
       <a href="./exam.html"
-        ><img src="./assets/img/epicode_logo.png" alt="Logo-EPICODE"
+        ><img
+          id="backWelcomePage"
+          src="./assets/img/epicode_logo.png"
+          alt="Logo-EPICODE"
       /></a>
 
       <div id="countdown">
