--- a/exam.html
+++ b/exam.html
@@ -39,7 +39,7 @@
               Changing browser tab or opening other windows will
               <strong>invalidate the question</strong>.
             </li>
-            <li>This exam will take approx. <strong>0-5 minutes</strong>.</li>
+            <li>This exam will take approx. <strong class="totalTimeText">0-5 minutes</strong>.</li>
           </ul>
           <form>
             <div class="cont-range">
