minor modify css

--- a/feedback.html
+++ b/feedback.html
@@ -40,6 +40,9 @@
           </button>
         </form>
       </div>
+      <div id="rispostaFeedback">
+        <h1></h1>
+      </div>
     </main>
     <script src="assets/js/feedback.js"></script>
   </body>
