fixed exam-button class name & font size

--- a/exam.html
+++ b/exam.html
@@ -10,12 +10,7 @@
   </head>
   <body>
     <header>
-      <a href="./exam.html"
-        ><img
-          id="backWelcomePage"
-          src="./assets/img/epicode_logo.png"
-          alt="Logo-EPICODE"
-      /></a>
+      <a href="./exam.html"><img id="backWelcomePage" src="./assets/img/epicode_logo.png" alt="Logo-EPICODE" /></a>
 
       <div id="countdown">
         <div id="countdown-text">
@@ -71,16 +66,16 @@
         </div>
         <form>
           <div class="container-buttons">
-            <div class="examButtons">
+            <div class="exam-buttons">
               <p>input type =</p>
             </div>
-            <div class="examButtons">
+            <div class="exam-buttons">
               <p>&#039;Do-while&#039; loops</p>
             </div>
-            <div class="examButtons">
+            <div class="exam-buttons">
               <p>&#039;While&#039; loops</p>
             </div>
-            <div class="examButtons">
+            <div class="exam-buttons">
               <p>&#039;For&#039; loops</p>
             </div>
           </div>
