change max-width main and header

--- a/exam.html
+++ b/exam.html
@@ -13,7 +13,12 @@
   </head>
   <body>
     <header>
-      <a href="./exam.html"><img id="backWelcomePage" src="./assets/img/epicode_logo.png" alt="Logo-EPICODE" /></a>
+      <a href="./exam.html"
+        ><img
+          id="backWelcomePage"
+          src="./assets/img/epicode_logo.png"
+          alt="Logo-EPICODE"
+      /></a>
 
       <div id="countdown">
         <div id="countdown-text">
