--- a/exam.html
+++ b/exam.html
@@ -6,19 +6,11 @@
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Document</title>
-    <script
-      src="https://kit.fontawesome.com/426cbf9d74.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/426cbf9d74.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
-      <a href="./exam.html"
-        ><img
-          id="backWelcomePage"
-          src="./assets/img/epicode_logo.png"
-          alt="Logo-EPICODE"
-      /></a>
+      <a href="./exam.html"><img id="backWelcomePage" src="./assets/img/epicode_logo.png" alt="Logo-EPICODE" /></a>
 
       <div id="countdown">
         <div id="countdown-text">
@@ -38,14 +30,11 @@
         <div>
           <h3>Instruction</h3>
           <p>
-            We don't expect most engineers to know the answer to all of these
-            questions, so don't worry if you are unsure of a few of them.
+            We don't expect most engineers to know the answer to all of these questions, so don't worry if you are
+            unsure of a few of them.
           </p>
           <ul class="instrucrion-list">
-            <li>
-              Each question is <strong>timed</strong> and can only be
-              <strong>answered once</strong>.
-            </li>
+            <li>Each question is <strong>timed</strong> and can only be <strong>answered once</strong>.</li>
             <li>
               Changing browser tab or opening other windows will
               <strong>invalidate the question</strong>.
@@ -75,9 +64,7 @@
 
             <input type="checkbox" required id="checkbox1" />
             <label for="checkbox1">
-              <strong
-                >I promise to answer myself without help from anyone</strong
-              >
+              <strong>I promise to answer myself without help from anyone</strong>
             </label>
             <button id="proceed" class="universal-style-btn-ns">PROCEED</button>
           </form>
@@ -112,7 +99,7 @@
 
       <div id="results">
         <h2><strong>Results</strong></h2>
-        <h3>The summary of your answer</h3>
+        <h4>The summary of your answer:</h4>
         <div class="cont-results">
           <div class="answer-result corrects-result"></div>
 
@@ -121,18 +108,14 @@
               <p></p>
             </div>
             <svg>
-              <circle r="160" cx="50%" cy="50%" />
-              <circle r="160" cx="50%" cy="50%" />
+              <circle r="140" cx="50%" cy="50%" />
+              <circle r="140" cx="50%" cy="50%" />
             </svg>
           </div>
           <div class="answer-result wrongs-result"></div>
         </div>
-        <button type="button" id="rate-us" class="universal-style-btn-ns">
-          RATE US
-        </button>
-        <button type="button" id="your-answers" class="universal-style-btn-ns">
-          YOUR ANSWERS
-        </button>
+        <button type="button" id="rate-us" class="universal-style-btn-ns">RATE US</button>
+        <button type="button" id="your-answers" class="universal-style-btn-ns">YOUR ANSWERS</button>
       </div>
       <div id="review"></div>
     </main>
