add 3 feedback page base on the num of stars

--- a/feedback.html
+++ b/feedback.html
@@ -35,13 +35,34 @@
         <p>Leave us an open feedback about your experience so far</p>
         <form>
           <input type="text" placeholder="Write your comment here" required />
-          <button id="more-info" class="universal-style-btn-ns">
-            MORE INFO
+          <button id="send-feedback" class="universal-style-btn-ns">
+            SEND FEEDBACK
           </button>
         </form>
       </div>
-      <div id="rispostaFeedback">
-        <h1></h1>
+      <div id="NoGoodFeedback">
+        <h1>Ci dispiace per non aver soddisfatto le tue aspettative</h1>
+        <a href="https://epicode.com/it/" target="_blank">
+          <button id="more-info" class="universal-style-btn-ns">
+            MORE INFO
+          </button>
+        </a>
+      </div>
+      <div id="MidGoodFeedback">
+        <h1>Grazie della risposta</h1>
+        <a href="https://epicode.com/it/" target="_blank">
+          <button id="more-info" class="universal-style-btn-ns">
+            MORE INFO
+          </button>
+        </a>
+      </div>
+      <div id="VeryGoodFeedback">
+        <h1>Spaziale!! Grazie mille per la tua risposta!!</h1>
+        <a href="https://epicode.com/it/" target="_blank">
+          <button id="more-info" class="universal-style-btn-ns">
+            MORE INFO
+          </button>
+        </a>
       </div>
     </main>
     <script src="assets/js/feedback.js"></script>
