--- a/index.html
+++ b/index.html
@@ -1,16 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./assets/css/reset.css" />
-		<link rel="stylesheet" href="./assets/css/style.css" />
-		<title>Document</title>
-	</head>
-	<body>
-		<header>
-			<img src="./assets/img/epicode_logo.png" alt="Logo-EPICODE" />
-		</header>
-		<main id="welcome-main"></main>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Document</title>
+    <script
+      src="https://kit.fontawesome.com/426cbf9d74.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <header>
+      <a href="./index.html"
+        ><img
+          id="backWelcomePage"
+          src="./assets/img/epicode_logo.png"
+          alt="Logo-EPICODE"
+      /></a>
+
+      <div id="countdown">
+        <div id="countdown-text">
+          <p>SECONDS</p>
+          <p>16</p>
+          <p>REMAINING</p>
+        </div>
+        <svg>
+          <circle r="52" cx="50%" cy="50%" />
+          <circle r="52" cx="50%" cy="50%" />
+        </svg>
+      </div>
+    </header>
+    <main>
+      <div id="welcome">
+        <h1>Welcome to <strong>your exam</strong></h1>
+        <div>
+          <h3>Instruction</h3>
+          <p>
+            We don't expect most engineers to know the answer to all of these
+            questions, so don't worry if you are unsure of a few of them.
+          </p>
+          <ul class="instrucrion-list">
+            <li>
+              Each question is <strong>timed</strong> and can only be
+              <strong>answered once</strong>.
+            </li>
+            <li>
+              Changing browser tab or opening other windows will
+              <strong>invalidate the question</strong>.
+            </li>
+            <li>
+              This exam will take approx.
+              <strong class="totalTimeText">0-5 minutes</strong>.
+            </li>
+          </ul>
+          <form>
+            <div class="cont-range">
+              <ul>
+                <li id="li1">Easy</li>
+                <li id="li2">Medium</li>
+                <li id="li3">Hard</li>
+              </ul>
+              <input
+                id="rangeValue"
+                type="range"
+                min="0"
+                max="200"
+                step="100"
+                value="0"
+                oninput="this.style.setProperty('--percentage', this.value / 100)"
+              />
+            </div>
+
+            <input type="checkbox" required id="checkbox1" />
+            <label for="checkbox1">
+              <strong
+                >I promise to answer myself without help from anyone</strong
+              >
+            </label>
+            <button id="proceed" class="universal-style-btn-ns">PROCEED</button>
+          </form>
+        </div>
+      </div>
+
+      <div id="exam">
+        <div id="domanda">
+          <h2>How can I create a checkbox in HTML?</h2>
+        </div>
+        <form>
+          <div class="container-buttons">
+            <div class="exam-buttons">
+              <p>input type =</p>
+            </div>
+            <div class="exam-buttons">
+              <p>&#039;Do-while&#039; loops</p>
+            </div>
+            <div class="exam-buttons">
+              <p>&#039;While&#039; loops</p>
+            </div>
+            <div class="exam-buttons">
+              <p>&#039;For&#039; loops</p>
+            </div>
+          </div>
+          <div class="form-footer">
+            <p>QUESTION 1 <span>/ 10</span></p>
+            <button id="avanti" class="universal-style-btn-ns">NEXT</button>
+          </div>
+        </form>
+      </div>
+
+      <div id="results">
+        <h2><strong>Results</strong></h2>
+        <h4>The summary of your answer:</h4>
+        <div class="cont-results">
+          <div class="answer-result corrects-result"></div>
+
+          <div class="result-grafic">
+            <div class="resutGrafic-text">
+              <p></p>
+            </div>
+            <svg>
+              <circle r="140" cx="50%" cy="50%" />
+              <circle r="140" cx="50%" cy="50%" />
+            </svg>
+          </div>
+          <div class="answer-result wrongs-result"></div>
+        </div>
+        <button type="button" id="rate-us" class="universal-style-btn-ns">
+          RATE US
+        </button>
+        <button type="button" id="your-answers" class="universal-style-btn-ns">
+          YOUR ANSWERS
+        </button>
+      </div>
+      <div id="review"></div>
+    </main>
+    <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/script.js"></script>
+  </body>
 </html>
