change document title and logo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Buid Week Project</title>
+    <link rel="icon" href="./assets/img/logo.png" type="image/png" />
+
     <script src="https://kit.fontawesome.com/426cbf9d74.js" crossorigin="anonymous"></script>
   </head>
   <body>
