--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Buid Week Project</title>
+    <title>Build Week Project</title>
     <link rel="icon" href="./assets/img/logo.png" type="image/png" />
 
     <script src="https://kit.fontawesome.com/426cbf9d74.js" crossorigin="anonymous"></script>
