--- a/feedback.html
+++ b/feedback.html
@@ -9,17 +9,12 @@
   </head>
   <body>
     <header>
-      <a href="./exam.html"
-        ><img src="./assets/img/epicode_logo.png" alt="Logo-EPICODE"
-      /></a>
+      <a href="./exam.html"><img src="./assets/img/epicode_logo.png" alt="Logo-EPICODE" /></a>
     </header>
     <main id="feedback-main">
       <div id="feedback">
         <h2>Tell us how it's going</h2>
-        <p>
-          From 0 to 10, how likely are you to recommend EPICODE to a friend or a
-          colleague?
-        </p>
+        <p>From 0 to 10, how likely are you to recommend EPICODE to a friend or a colleague?</p>
         <div id="img-stelle">
           <img src="./assets/img/star.svg" alt="stella1" />
           <img src="./assets/img/star.svg" alt="stella2" />
@@ -35,17 +30,11 @@
         <p>Leave us an open feedback about your experience so far</p>
         <form>
           <input type="text" placeholder="Write your comment here" required />
-          <button id="send-feedback" class="universal-style-btn-ns">
-            SEND FEEDBACK
-          </button>
+          <button id="send-feedback" class="universal-style-btn-ns">SEND FEEDBACK</button>
         </form>
       </div>
       <div id="NoGoodFeedback">
-        <svg
-          class="svg-emoji"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 48 48"
-        >
+        <svg class="svg-emoji" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
           <defs>
             <style>
               .cls-3 {
@@ -90,50 +79,15 @@
               class="cls-7"
               d="M46 23c0 10.493-9.85 19-22 19S2 33.493 2 23h-.975c-.014.332-.025.665-.025 1a23 23 0 0 0 46 0c0-.335-.011-.668-.025-1z"
             />
-            <ellipse
-              class="cls-5"
-              cx="37"
-              cy="9"
-              rx=".825"
-              ry="1.148"
-              transform="rotate(-45.02 37 9)"
-            />
-            <ellipse
-              class="cls-5"
-              cx="30.746"
-              cy="4.5"
-              rx=".413"
-              ry=".574"
-              transform="rotate(-45.02 30.745 4.5)"
-            />
-            <ellipse
-              class="cls-5"
-              cx="34"
-              cy="7"
-              rx="1.65"
-              ry="2.297"
-              transform="rotate(-45.02 34 7)"
-            />
+            <ellipse class="cls-5" cx="37" cy="9" rx=".825" ry="1.148" transform="rotate(-45.02 37 9)" />
+            <ellipse class="cls-5" cx="30.746" cy="4.5" rx=".413" ry=".574" transform="rotate(-45.02 30.745 4.5)" />
+            <ellipse class="cls-5" cx="34" cy="7" rx="1.65" ry="2.297" transform="rotate(-45.02 34 7)" />
             <path
               d="M34.135 29.047c.723.439 2.365 3.908 2.365 5.286a2.505 2.505 0 1 1-5 0c0-1.378 1.642-4.847 2.365-5.286-.852.469-2.865 4.877-2.865 6.62A3.179 3.179 0 0 0 34 39a3.179 3.179 0 0 0 3-3.333c0-1.743-2.013-6.151-2.865-6.62z"
               style="fill: #00a3e1"
             />
-            <ellipse
-              class="cls-5"
-              cx="35"
-              cy="35"
-              rx=".825"
-              ry="1.148"
-              transform="rotate(-45.02 35 35)"
-            />
-            <ellipse
-              class="cls-5"
-              cx="35.746"
-              cy="33.5"
-              rx=".413"
-              ry=".574"
-              transform="rotate(-45.02 35.746 33.5)"
-            />
+            <ellipse class="cls-5" cx="35" cy="35" rx=".825" ry="1.148" transform="rotate(-45.02 35 35)" />
+            <ellipse class="cls-5" cx="35.746" cy="33.5" rx=".413" ry=".574" transform="rotate(-45.02 35.746 33.5)" />
             <path
               class="cls-7"
               d="M34 39a3.048 3.048 0 0 1-2.853-2.354A4.808 4.808 0 0 0 31 37.667 3.179 3.179 0 0 0 34 41a3.179 3.179 0 0 0 3-3.333 4.808 4.808 0 0 0-.147-1.021A3.048 3.048 0 0 1 34 39z"
@@ -142,17 +96,11 @@
         </svg>
         <h1>We are sorry for not meeting your expectations</h1>
         <a href="https://epicode.com/it/" target="_blank">
-          <button id="more-info" class="universal-style-btn-ns">
-            MORE INFO
-          </button>
+          <button id="more-info" class="universal-style-btn-ns">MORE INFO</button>
         </a>
       </div>
       <div id="MidGoodFeedback">
-        <svg
-          class="svg-emoji"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 48 48"
-        >
+        <svg class="svg-emoji" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
           <defs>
             <style>
               .cls-2 {
@@ -186,37 +134,14 @@
               d="M46 23c0 10.493-9.85 19-22 19S2 33.493 2 23h-.975c-.014.332-.025.665-.025 1a23 23 0 0 0 46 0c0-.335-.011-.668-.025-1z"
               style="fill: #ffb32b"
             />
-            <ellipse
-              class="cls-4"
-              cx="37"
-              cy="9"
-              rx=".825"
-              ry="1.148"
-              transform="rotate(-45.02 37 9)"
-            />
-            <ellipse
-              class="cls-4"
-              cx="30.746"
-              cy="4.5"
-              rx=".413"
-              ry=".574"
-              transform="rotate(-45.02 30.745 4.5)"
-            />
-            <ellipse
-              class="cls-4"
-              cx="34"
-              cy="7"
-              rx="1.65"
-              ry="2.297"
-              transform="rotate(-45.02 34 7)"
-            />
+            <ellipse class="cls-4" cx="37" cy="9" rx=".825" ry="1.148" transform="rotate(-45.02 37 9)" />
+            <ellipse class="cls-4" cx="30.746" cy="4.5" rx=".413" ry=".574" transform="rotate(-45.02 30.745 4.5)" />
+            <ellipse class="cls-4" cx="34" cy="7" rx="1.65" ry="2.297" transform="rotate(-45.02 34 7)" />
           </g>
         </svg>
         <h1>Thanks for your feedback</h1>
         <a href="https://epicode.com/it/" target="_blank">
-          <button id="more-info" class="universal-style-btn-ns">
-            MORE INFO
-          </button>
+          <button id="more-info" class="universal-style-btn-ns">MORE INFO</button>
         </a>
       </div>
       <div id="VeryGoodFeedback">
@@ -296,10 +221,7 @@
             d="M7 26c0 3.32 7.6 7 17 7s17-3.68 17-7a12.636 12.636 0 0 1-5.6 10.38 19.76 19.76 0 0 1-22.8 0A12.636 12.636 0 0 1 7 26z"
             style="fill: #ae2d4c"
           />
-          <path
-            class="cls-3"
-            d="M41 26c0 3.32-7.6 7-17 7S7 29.32 7 26c1 1 8 2 17 2s16-1 17-2z"
-          />
+          <path class="cls-3" d="M41 26c0 3.32-7.6 7-17 7S7 29.32 7 26c1 1 8 2 17 2s16-1 17-2z" />
           <ellipse class="cls-4" cx="33" cy="18" rx="3" ry="4" />
           <ellipse class="cls-4" cx="15" cy="18" rx="3" ry="4" />
           <ellipse class="cls-5" cx="33" cy="18" rx="2" ry="3" />
@@ -322,30 +244,9 @@
             d="M46 23c0 10.493-9.85 19-22 19S2 33.493 2 23h-.975c-.014.332-.025.665-.025 1a23 23 0 0 0 46 0c0-.335-.011-.668-.025-1z"
             style="fill: #ffb32b"
           />
-          <ellipse
-            class="cls-3"
-            cx="37"
-            cy="9"
-            rx=".825"
-            ry="1.148"
-            transform="rotate(-45.02 37 9)"
-          />
-          <ellipse
-            class="cls-3"
-            cx="30.746"
-            cy="4.5"
-            rx=".413"
-            ry=".574"
-            transform="rotate(-45.02 30.745 4.5)"
-          />
-          <ellipse
-            class="cls-3"
-            cx="34"
-            cy="7"
-            rx="1.65"
-            ry="2.297"
-            transform="rotate(-45.02 34 7)"
-          />
+          <ellipse class="cls-3" cx="37" cy="9" rx=".825" ry="1.148" transform="rotate(-45.02 37 9)" />
+          <ellipse class="cls-3" cx="30.746" cy="4.5" rx=".413" ry=".574" transform="rotate(-45.02 30.745 4.5)" />
+          <ellipse class="cls-3" cx="34" cy="7" rx="1.65" ry="2.297" transform="rotate(-45.02 34 7)" />
         </svg>
         <svg
           class="svg-emoji"
@@ -400,9 +301,7 @@
         </svg>
         <h1>Awesome!! Thank you so much for your answer!!</h1>
         <a href="https://epicode.com/it/" target="_blank">
-          <button id="more-info" class="universal-style-btn-ns">
-            MORE INFO
-          </button>
+          <button id="more-info" class="universal-style-btn-ns">MORE INFO</button>
         </a>
       </div>
     </main>
