--- a/feedback.html
+++ b/feedback.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <a href="./exam.html"><img src="./assets/img/epicode_logo.png" alt="Logo-EPICODE" /></a>
+      <a href="./index.html"><img src="./assets/img/epicode_logo.png" alt="Logo-EPICODE" /></a>
     </header>
     <main id="feedback-main">
       <div id="feedback">
